# NETCOMM

./: .gitignore  DEMO_NOTES.md  PROJECT_STATE.md  README.md  REPO_OVERVIEW.md  RESULTS.md  pyproject.toml
configs/: base.yaml
coverage_control/: __init__.py  config.py  controller.py  voronoi.py
diffsim/: __init__.py  config.py  demo.py  model.py  rollout.py
evaluation/: __init__.py  config.py  evaluate.py  gospa.py  hota.py  mot.py  motion.py  ospa2.py  pcrlb.py
experiments/: _runner.py  make_figures.py  make_figures_v2.py  make_tables.py  merge_baselines.py  run_ablations.py  run_action_regime.py  run_action_regime_idle.py  run_baselines_ci.py  run_batch_tests.py  run_calibration.py  run_evaluation.py  run_hmm_inference.py  run_mode_occupancy.py  run_overhead.py  run_regime_sweep.py  run_regime_trace.py  run_robustness.py  run_scalability.py  run_tracking_demo.py  run_udp_stress.py  run_vod_validation.py  run_vop_validation.py  sbatch_ablations.sh  sbatch_baselines_ci.sh  sbatch_calibration.sh  sbatch_hmm_inference.sh  sbatch_mode_occupancy.sh  sbatch_overhead.sh  sbatch_regime_sweep.sh  sbatch_robustness.sh  sbatch_scalability.sh  sbatch_udp_stress.sh  sbatch_vod_validation.sh  sbatch_vop_validation.sh  smoke.py
gmphd/: __init__.py  config.py  gmphd.py  kernels.py  models.py  types.py
infomax/: __init__.py  actions.py  config.py  controller.py  maximizer.py  objective.py
modtrack/: __init__.py  clustering.py  fusion.py  linalg.py  motion.py  types.py  uncertainty.py
netcomm/: __init__.py  runner.py  types.py  visualizer.py
nonmyopic/: __init__.py  assignment.py  config.py  pruning.py  riccati.py  (+2 more)
(+117 files in other folders)
